--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.newpackage">More info</a>
 	  </div>
 	</div>
+
+<div class="panel panel-default">
+	  <div class="panel-heading">Mejor</div>
+	  <div class="panel-body">
+		Add features to apps beautifully. (Downloads not works well, It is not a crack problem, the same thing happens with the original tweak).<br /><br />
+		<a class="btn btn-xs btn-default" href="depictions/?p=io.github.ArabCrackPlus.mejor">More info</a>
+	  </div>
+	</div>
 </div>
 
 </body>
